hphp/test/zend/good/Zend/tests/bug32428.php
<?php 
  $data = @$not_exists; 
  $data = @($not_exists); 
  $data = @!$not_exists; 
  $data = !@$not_exists; 
  $data = @($not_exists+1); 
  echo "ok\n";
?>