hphp/test/zend/bad/zend/unset_cv05.php
<?php
$_SESSION = "ok\n";
echo $_SESSION;
session_start();
echo $_SESSION;
echo "\nok\n";
?>